<resources>

    <string name="Password">Password</string>
    <string name="Email">Email</string>
    <string name="Login">Login</string>
    <string name="secure">secure</string>
    <string name="send_message">send message</string>
    <string name="send_message_text">send message</string>
    <string name="siren_play_img">siren_play_img</string>
    <string name="siren_play">siren_play</string>
    <string name="emergency_call_img">emergency_call_img</string>
    <string name="emergency_call">emergemcy_call</string>
    <string name="security_call_img">/security_call_img</string>
    <string name="security_call">security_call</string>
    <string name="my_location_img">my_location_img</string>
    <string name="my_location">my_location</string>
    <string name="near_by_place_img">near_by_place_img</string>
    <string name="near_by_place">near_by_place</string>
    <string name="take_video_img">take_video_img</string>
    <string name="take_video">take_video</string>
    <string name="tips_for_save">tips_for_save</string>
    <string name="tips_for_save_img">tips_for_save_img</string>
    <string name="coming_soon_img">coming_soon_img</string>
    <string name="coming_soon">coming_soon</string>
    <string name="Confirm_Password">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="SafeWell">SafeWell</string>
    <string name="ic_location">ic_location</string>
    <string name="If_dont_have_an_account_register_here">If dont have an account register here</string>
    <string name="If_already_have_an_account_login_here">If already have an account login here</string>
    <string name="share_location">Share Location</string>
    <string name="police_station">Police Station</string>
    <string name="nearby_hospital">Nearby Hospital</string>
    <string name="my_contact">My Contact</string>
    <string name="emergency_message">Emergency Message</string>
    <string name="logout">Logout</string>
    <string name="register_here">Register Here</string>
    <string name="if_dont_have_an_account">If dont have an account</string>
    <string name="login_here">Login Here</string>
    <string name="if_already_have_account">If already have account</string>

</resources>